# RETEV2025

./: LICENSE  RetevBest.ipynb  livedemo.py  main.py  model_inference_keyboard.py  pyproject.toml  readme.md  requirements.txt  train_ml.py  train_nn.py
data/: combine_data.py  data_collection.py  event_ids1.json  event_ids2.json  readme.md
data/eeg_raw_recordings/sub-01/: sub-01_run-003_eeg_raw_log.csv
data/eeg_raw_recordings/sub-05/: sub-05_run-001_eeg_raw_log.csv
data/eeg_raw_recordings/sub-06/: sub-06_run-001_eeg_raw_log.csv  sub-06_run-002_eeg_raw_log.csv
data/eeg_raw_recordings/sub-07/: sub-07_run-001_eeg_raw_log.csv
data/eeg_raw_recordings/sub-10/: sub-10_run-001_eeg_raw_log.csv
data/eeg_recordings/sub-01/: sub-01_run-003_eeg_prc_log.csv
data/eeg_recordings/sub-06/: sub-06_run-001_eeg_prc_log.csv  sub-06_run-002_eeg_prc_log.csv
data/eeg_recordings/sub-07/: sub-07_run-001_eeg_prc_log.csv
data/eeg_recordings/sub-10/: sub-10_run-001_eeg_prc_log.csv
data/key_recordings/sub-01/: sub-01_run-003_key_log.csv  sub-01_run-005_key_log.csv  sub-01_run-007_key_log.csv  sub-01_run-009_key_log.csv  sub-01_run001_key_log.csv  sub-01_run002_key_log.csv
features/: __init__.py  feature_extractor.py  features.py
models/: __init__.py  baseline.py  eegnet.py  eegnet_best_01_space.pth  eegnet_best_02_space.pth  firstattempt91per.h5  ml_model.py  readme.md  riemann_classifier.py
notebooks/: signal_analysis.ipynb
train/: dataset.py  train_ml.py  train_nn.py
utils/: TresholdModel.py  eeg_keyboard.py  model_inference_keyboard.py  utils.py
(+21 files in other folders)
