[project]
name = "retev2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "braindecode>=0.8.1",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.3",
    "mne==1.9",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pykey>=0.2",
    "pylsl>=1.17.6",
    "pynput>=1.8.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]
